# ITOI

./: CMakeLists.txt  main.cpp
libs/CImg-2.2.0_pre012318/: README.txt
libs/JPEGReaderWriter-1.0.1/: JPEGReader.cpp
libs/corona-1.0.1/: Makefile.in  aclocal.m4  configure
libs/corona-1.0.1/doc/: Makefile.in
libs/corona-1.0.1/examples/: Makefile.in
libs/corona-1.0.1/examples/formats/: Makefile.in
libs/corona-1.0.1/src/: Makefile.in
libs/corona-1.0.1/src/libungif-4.1.0/: Makefile.in
libs/jpeg-9c/: cdjpeg.h  jcapimin.c  jcarith.c  jcsample.c  jdapimin.c  jdarith.c  jdmaster.c  jdsample.c  jmemdos.c  jmemmgr.c  jmorecfg.h  jpeglib.h  rdppm.c
libs/png++-0.2.9/: png.hpp  types.hpp
src/: Application.cpp  Application.h  DescriptorFinder.cpp  DescriptorFinder.h
src/Core/: Core.cpp  Core.h
src/Course/: SimilarImagesFinder.cpp  SimilarImagesFinder.h
src/Image/: Image.cpp  Image.h
src/ImageReaderWriter/: ImageReader.cpp  ImageReader.h  ImageWriter.cpp  ImageWriter.h
src/InterestPoints/: InterestPoints.cpp  InterestPoints.h
src/Kernel/: Kernel.cpp  Kernel.h
src/Pyramid/: Pyramid.cpp  Pyramid.h
